--- a/spoify_ka_clone/scss file/_layouts_all.scss
+++ b/spoify_ka_clone/scss file/_layouts_all.scss
@@ -39,7 +39,6 @@ main {
     grid-template-columns: 20% auto;
     gap: 1em;
     padding: 1em;
-
 }
 
 aside {
@@ -202,7 +201,7 @@ aside {
 
 footer {
     position: sticky;
-    bottom: 0;
+    bottom: 0px;
     height: 120px;
     width: 100%;
     padding: 1.5em;
@@ -252,5 +251,121 @@ footer {
             font-size: 1.5rem;
         }
 
+    }
+}
+
+
+@media (max-width: 1324px) {
+
+    .aside-child {
+        background-color: black !important;
+    }
+
+    .titles {
+        grid-template-columns: 3em 3fr 2.5fr 0.81fr !important;
+
+    }
+
+    .down-list {
+        grid-template-columns: 3em 3fr 2.5fr 1fr;
+
+    }
+
+    .DateOfPub {
+        display: none;
+    }
+
+    footer {
+        justify-content: center;
+
+        .control-center {
+            flex-direction: column-reverse;
+        }
+
+        .control-center {
+            margin: 0;
+        }
+
+        .other-stuff,
+        .item {
+            display: none;
+        }
+    }
+}
+
+
+@media (max-width: 1200px) {
+    main {
+        grid-template-columns: 12% auto;
+    }
+
+    .keep-right {
+        position: relative;
+    }
+
+    aside {
+        .box {
+            flex-direction: column;
+            align-items: center;
+
+            span,
+            .PLayslit {
+                display: none !important;
+            }
+        }
+
+        .Library {
+            justify-content: center;
+
+            span {
+                display: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 900px) {
+
+    .titles {
+        grid-template-columns: 3em 3fr 0.8fr !important;
+        font-size: 1.2rem;
+
+    }
+
+    .down-list {
+        grid-template-columns: 3em 3fr 0.8fr;
+
+        .SoneName {
+            width: 100%;
+            font-size: 1.2rem;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+    }
+
+    .Alb {
+        display: none;
+    }
+}
+
+@media (width<= 820px) {
+    main{
+        grid-template-columns: 1fr;
+        font-size: 1rem !important;
+    }
+    aside{
+        width: 100%;
+        display: grid ;
+        grid-template-columns: repeat(2 , 10em);
+        height: 150px;
+        position: fixed;
+        top: 95%;
+        justify-content: space-between;
+        // align-content: flex-end;
+        z-index: 200;
+
+        .aside-child{
+            display: flex;
+        }
     }
 }
