--- a/spoify_ka_clone/scss file/index.css
+++ b/spoify_ka_clone/scss file/index.css
@@ -254,17 +254,6 @@ aside .aside-child .Library .PLayslit {
   font-size: 1.5rem;
 }
 
-.play {
-  position: absolute;
-  left: 10%;
-  top: 10%;
-}
-
-.songlist-upper .play {
-  left: 0%;
-  top: 5%;
-}
-
 .songlist .songlist-upper {
   width: 95%;
   margin: 0 auto;
@@ -329,7 +318,7 @@ aside .aside-child .Library .PLayslit {
 
 footer {
   position: sticky;
-  bottom: 0;
+  bottom: 0px;
   height: 120px;
   width: 100%;
   padding: 1.5em;
@@ -379,4 +368,91 @@ footer .other-stuff {
 }
 footer .other-stuff i {
   font-size: 1.5rem;
+}
+
+@media (max-width: 1324px) {
+  .aside-child {
+    background-color: black !important;
+  }
+  .titles {
+    grid-template-columns: 3em 3fr 2.5fr 0.81fr !important;
+  }
+  .down-list {
+    grid-template-columns: 3em 3fr 2.5fr 1fr;
+  }
+  .DateOfPub {
+    display: none;
+  }
+  footer {
+    justify-content: center;
+  }
+  footer .control-center {
+    flex-direction: column-reverse;
+  }
+  footer .control-center {
+    margin: 0;
+  }
+  footer .other-stuff,
+  footer .item {
+    display: none;
+  }
+}
+@media (max-width: 1200px) {
+  main {
+    grid-template-columns: 12% auto;
+  }
+  .keep-right {
+    position: relative;
+  }
+  aside .box {
+    flex-direction: column;
+    align-items: center;
+  }
+  aside .box span,
+  aside .box .PLayslit {
+    display: none !important;
+  }
+  aside .Library {
+    justify-content: center;
+  }
+  aside .Library span {
+    display: none;
+  }
+}
+@media (max-width: 900px) {
+  .titles {
+    grid-template-columns: 3em 3fr 0.8fr !important;
+    font-size: 1.2rem;
+  }
+  .down-list {
+    grid-template-columns: 3em 3fr 0.8fr;
+  }
+  .down-list .SoneName {
+    width: 100%;
+    font-size: 1.2rem;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .Alb {
+    display: none;
+  }
+}
+@media (width <= 820px) {
+  main {
+    grid-template-columns: 1fr;
+    font-size: 1rem !important;
+  }
+  aside {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 10em);
+    height: 150px;
+    position: fixed;
+    top: 95%;
+    justify-content: space-between;
+    z-index: 200;
+  }
+  aside .aside-child {
+    display: flex;
+  }
 }/*# sourceMappingURL=index.css.map */
