--- a/Portfolio/index scss/_fonts.scss
+++ b/Portfolio/index scss/_fonts.scss
@@ -12,6 +12,12 @@ body {
     height: 100%;
 }
 
+@mixin new_response($size) {
+    @media (max-width : $size) {
+        @content;
+    }
+}
+
 main {
     background-color: beige;
 }
@@ -31,6 +37,18 @@ menu {
     }
 
 }
+
+.current {
+    // border-bottom: 2px solid rgb(18, 87, 48) ;
+    color: rgb(18, 87, 48);
+
+}
+
+.current:hover {
+    color: white;
+    transition: all 0.2 ease;
+}
+
 
 .intro {
     color: rgb(101, 97, 97);
@@ -62,6 +80,36 @@ menu {
 
         .Inhigh {
             color: rgb(249, 249, 20);
+        }
+    }
+}
+
+@include new_response(400px) {
+    .intro {
+        .name {
+            font-size: 5vh;
+            white-space: nowrap;
+            letter-spacing: 0.1vw;
+            // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: rgb(18, 87, 48);
+            font-family: "Futura Now Headline", "Lucida Sans", Tahoma, sans-serif;
+        }
+
+        .about-me {
+            margin: 1vh 0;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 1.35vw;
+        }
+
+        .specialization {
+
+            color: white;
+            font-size: 1.7vw;
+            line-height: 3.419vw;
+
+            .Inhigh {
+                color: rgb(249, 249, 20);
+            }
         }
     }
 }
