--- a/Portfolio/index scss/_layout.scss
+++ b/Portfolio/index scss/_layout.scss
@@ -1,5 +1,11 @@
+@mixin response($size) {
+    @media (max-width : $size) {
+        @content;
+    }
+}
+
 main {
-    max-height: 100vh;
+    height: 100vh;
     position: relative;
     overflow: hidden;
     display: flex;
@@ -9,7 +15,7 @@ main {
 menu {
     position: fixed;
     left: 5%;
-    top: 31.9vh;
+    top: 29vh;
     border-radius: 20px;
     z-index: 100;
 
@@ -74,28 +80,101 @@ menu {
     // background-color: crimson;
 }
 
-.specialization{
+.specialization {
     // margin-right: 10vw;
     padding: 1vh;
     padding-left: 2.5vw;
     // right: 8%;
     width: 90%;
-    background-color:rgb(101, 97, 97);
+    background-color: rgb(101, 97, 97);
     border-radius: 25px;
     display: flex;
     align-items: center;
     margin-bottom: 1vh;
 
-    img{
+    img {
         height: 5%;
         width: 5%;
         object-fit: cover;
         object-position: center;
-        margin-left:0.9vw;
+        margin-left: 0.9vw;
 
-        .canva{
+        .canva {
             display: block;
             border-radius: 10px;
         }
     }
+}
+
+@include response(400px) {
+
+    main {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    menu {
+        left: 13%;
+        top: 2vh;
+        padding: 0 1.5vw;
+
+        ul {
+            flex-direction: row;
+            gap: 5vw;
+        }
+    }
+
+
+    .at-angle {
+        display: none;
+    }
+
+    .container {
+        order: 2;
+        img {
+            border-radius: 50%;
+            width: 100%;
+            height: 30%;
+            margin-left: 0;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+
+
+    .intro {
+        order: 1;
+        position: relative;
+        // top: 0vh;
+        left: 0vw;
+        width: 50%;
+        z-index: 30;
+        // background-color: crimson;
+    }
+
+    .specialization {
+        padding: 1vh;
+        padding-left: 0vw;
+        background-color: rgb(101, 97, 97);
+        border-radius: 25px;
+        display: flex;
+        align-items: center;
+        margin-bottom: 0vh;
+
+        img {
+            height: 5%;
+            width: 5%;
+            object-fit: cover;
+            object-position: center;
+            margin-left: 0;
+
+            .canva {
+                display: block;
+                border-radius: 10px;
+            }
+        }
+    }
+
+
 }
