--- a/Portfolio/index scss/ind.css
+++ b/Portfolio/index scss/ind.css
@@ -31,6 +31,15 @@ menu a:hover i {
   transition: all 0.5s ease;
 }
 
+.current {
+  color: rgb(18, 87, 48);
+}
+
+.current:hover {
+  color: white;
+  transition: all 0.2 ease;
+}
+
 .intro {
   color: rgb(101, 97, 97);
 }
@@ -58,8 +67,30 @@ menu a:hover i {
   color: rgb(249, 249, 20);
 }
 
+@media (max-width: 400px) {
+  .intro .name {
+    font-size: 5vh;
+    white-space: nowrap;
+    letter-spacing: 0.1vw;
+    color: rgb(18, 87, 48);
+    font-family: "Futura Now Headline", "Lucida Sans", Tahoma, sans-serif;
+  }
+  .intro .about-me {
+    margin: 1vh 0;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-size: 1.35vw;
+  }
+  .intro .specialization {
+    color: white;
+    font-size: 1.7vw;
+    line-height: 3.419vw;
+  }
+  .intro .specialization .Inhigh {
+    color: rgb(249, 249, 20);
+  }
+}
 main {
-  max-height: 100vh;
+  height: 100vh;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -69,7 +100,7 @@ main {
 menu {
   position: fixed;
   left: 5%;
-  top: 31.9vh;
+  top: 29vh;
   border-radius: 20px;
   z-index: 100;
 }
@@ -151,4 +182,66 @@ menu ul li a span {
 .specialization img .canva {
   display: block;
   border-radius: 10px;
+}
+
+@media (max-width: 400px) {
+  main {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  menu {
+    left: 13%;
+    top: 2vh;
+    padding: 0 1.5vw;
+  }
+  menu ul {
+    flex-direction: row;
+    gap: 5vw;
+  }
+  .at-angle {
+    display: none;
+  }
+  .container {
+    order: 2;
+  }
+  .container img {
+    border-radius: 50%;
+    width: 100%;
+    height: 30%;
+    margin-left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+  }
+  .intro {
+    order: 1;
+    position: relative;
+    left: 0vw;
+    width: 50%;
+    z-index: 30;
+  }
+  .specialization {
+    padding: 1vh;
+    padding-left: 0vw;
+    background-color: rgb(101, 97, 97);
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0vh;
+  }
+  .specialization img {
+    height: 5%;
+    width: 5%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+    margin-left: 0;
+  }
+  .specialization img .canva {
+    display: block;
+    border-radius: 10px;
+  }
 }/*# sourceMappingURL=ind.css.map */
