--- a/Portfolio/gallery/galcss.css
+++ b/Portfolio/gallery/galcss.css
@@ -13,17 +13,16 @@ body {
 
 :root {
     --hei: 80vh;
+    --gren: #1c2517;
+    --high: #FFDE82;
+    --light_brown: #CAA74E;
+    --dark_brown: #917319;
+    --len: 100px;
 }
-
 /* font-size: 4vh; */
 
 .current {
-    color: rgb(18, 87, 48);
-}
-
-.current:hover {
-    color: white;
-    transition: all 0.2 ease;
+    color: var(--light_brown);
 }
 
 main {
@@ -38,6 +37,7 @@ menu {
     z-index: 100;
     top: 3.5vh;
     transform: translate(-50%, -50%);
+    background-color: rgb(0, 0, 0);
     overflow: hidden;
 }
 
@@ -46,7 +46,6 @@ menu ul {
     display: flex;
     padding: 1.2vh 4vw;
     gap: 2vw;
-    background-color: rgb(101, 97, 97);
 
 }
 
@@ -66,9 +65,7 @@ menu a {
 }
 
 menu a:hover i {
-    color: rgb(18, 87, 48);
-    transform: scale(1.2);
-    transition: all 0.5s ease;
+    color: var(--light_brown);
 }
 
 menu ul li a span {
@@ -104,7 +101,7 @@ menu ul li a span {
     width: 100%;
     height: 200%;
     position: absolute;
-    background: black;
+    background-color: black;
     z-index: 10;
     opacity: 0;
 }
@@ -290,7 +287,7 @@ menu ul li a span {
         flex-direction: column;
         padding: 1.2em;
         gap: 2vw;
-        background-color: rgb(101, 97, 97);
+        background-color: rgb(0, 0, 0);
 
     }
 }
