--- a/spoify_ka_clone/scss file/_layouts_all.scss
+++ b/spoify_ka_clone/scss file/_layouts_all.scss
@@ -205,7 +205,7 @@ footer {
     bottom: 0;
     height: 120px;
     width: 100%;
-    padding: 1.5em;
+    padding: 4em 7.5em;
     @include centering_along_row(space-between);
 
 
@@ -226,8 +226,8 @@ footer {
     }
 
     .control-center {
-        margin-left: 15em;
         width: 40%;
+        padding-bottom: 1em;
         @include centering_along_col();
 
         .changer {
@@ -244,10 +244,10 @@ footer {
     }
 
     .other-stuff {
-        width: 13.5%;
-        @include centering_along_row(space-evenly);
-        gap: .5em;
-
+        width: 18%;
+        display: flex;
+        justify-content: flex-end;
+        gap: 1.5em;
         i {
             font-size: 1.5rem;
         }
