--- a/Gym recorder/scss-file/_layout.scss
+++ b/Gym recorder/scss-file/_layout.scss
@@ -8,9 +8,8 @@
 
 .main-container {
     width: 80%;
-    height: 100vh;
+    max-height: 100vh;
     margin: 0em auto;
-    overflow: hidden;
 
     .black-thing {
         opacity: 0.5;
@@ -45,8 +44,12 @@
 .List-of-exc{
     border: 8px solid black;
     border-radius: 50px;
-    padding: 2.5em 0;
+    // padding: 2.5em 0;
+    // padding-top: 193em; 
+    // padding-bottom: 1em; 
     @include centering(column);
+    overflow-y: auto;
+    height: 75vh;
     gap: 1em;
 }
 
@@ -57,6 +60,7 @@
     border-radius: 50px;
     @include centering(column);
     gap: 1em;
+    // margin-top: 1em;
 }
 
 .Exc-Name{
