--- a/Portfolio/index scss/_fonts.scss
+++ b/Portfolio/index scss/_fonts.scss
@@ -13,10 +13,11 @@ body {
 }
 
 :root {
-    --gren: #1c2517;
+    --gren: #506D71;
     --high: #FFDE82;
     --light_brown: #CAA74E;
     --dark_brown: #917319;
+    --dark_white: white;
     --len: 100px;
 }
 
@@ -34,11 +35,11 @@ body {
 }
 
 menu {
-    background-color: var(--gren);
+    // background-color: var(--gren);
 
     a {
-        font-size: 3vh;
-        color: white;
+        font-size: 3rem;
+        color: black;
 
         &:hover i {
             color: var(--light_brown);
@@ -68,23 +69,26 @@ menu {
         text-transform: uppercase;
         font-size: 7vw;
         position: relative;
-        right: 0.51em;
+        // right: 0.51em;
         letter-spacing: 0.1vw;
         color: var(--gren);
         white-space: nowrap;
-        font-family: "Futura Now Headline", "Lucida Sans", Tahoma, sans-serif;
+        font-family: norwester;
+
     }
 
     .about-me {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color: var(--light_brown);
+        color: var(--dark_brown);
+        font-family: 'Anton', sans-serif;
         font-size: 3.4vw;
     }
 
     .specialization {
         background-color: var(--gren);
         color: white;
-        font-size: 4.5vw;
+        font-family: norwester;
+        font-size: 4vw;
+        font-weight: 500;
 
         // .Inhigh {
         //     color: rgb(249, 249, 20);
@@ -109,7 +113,7 @@ menu {
         .specialization {
 
             color: white;
-            font-size: 1.59rem;
+            font-size: 1.2rem;
             line-height: 3.419vw;
         }
     }
