--- a/Portfolio/index scss/ind.css
+++ b/Portfolio/index scss/ind.css
@@ -15,10 +15,11 @@ body {
 }
 
 :root {
-  --gren: #1c2517;
+  --gren: #506D71;
   --high: #FFDE82;
   --light_brown: #CAA74E;
   --dark_brown: #917319;
+  --dark_white: white;
   --len: 100px;
 }
 
@@ -28,12 +29,9 @@ body {
   text-transform: uppercase;
 }
 
-menu {
-  background-color: var(--gren);
-}
 menu a {
-  font-size: 3vh;
-  color: white;
+  font-size: 3rem;
+  color: black;
 }
 menu a:hover i {
   color: var(--light_brown);
@@ -57,21 +55,22 @@ menu a:hover i {
   text-transform: uppercase;
   font-size: 7vw;
   position: relative;
-  right: 0.51em;
   letter-spacing: 0.1vw;
   color: var(--gren);
   white-space: nowrap;
-  font-family: "Futura Now Headline", "Lucida Sans", Tahoma, sans-serif;
+  font-family: norwester;
 }
 .intro .about-me {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: var(--light_brown);
+  color: var(--dark_brown);
+  font-family: "Anton", sans-serif;
   font-size: 3.4vw;
 }
 .intro .specialization {
   background-color: var(--gren);
   color: white;
-  font-size: 4.5vw;
+  font-family: norwester;
+  font-size: 4vw;
+  font-weight: 500;
 }
 
 @media (min-width: 1000px) {
@@ -86,7 +85,7 @@ menu a:hover i {
   }
   .intro .specialization {
     color: white;
-    font-size: 1.59rem;
+    font-size: 1.2rem;
     line-height: 3.419vw;
   }
 }
